<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_order"
            android:icon="@drawable/ic_store_app_order_processing_indicator"
            android:title="@string/title_order" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_blue_grey_600_48dp"
            android:title="@string/preference_title_store_category" />

        <item
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/ic_monetization_on_black_48dp"
            android:title="@string/menu_title_withdraw" />

        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_print_blue_grey_600_48dp"
            android:title="@string/menu_title_equipment" />

        <item
            android:id="@+id/nav_store_registration"
            android:icon="@drawable/ic_store_blue_grey_600_48dp"
            android:title="@string/menu_title_store_sign_up" />
    </group>
</menu>
